objects/EVL_PathSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>Visible_To__c</fullName>
        <label>Visible To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canNavigateTo__c</fullName>
        <label>canNavigateTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive_For__c</fullName>
        <label>isActive For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EVL_PathSetting</label>
    <listViews>
        <fullName>CMI_All</fullName>
        <columns>MasterLabel</columns>
        <columns>canNavigateTo__c</columns>
        <columns>isActive_For__c</columns>
        <columns>Visible_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>CMI All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>EVL_PathSettings</pluralLabel>
</CustomObject>